--- a/G1ProyectoFinalLPIII2000UNAH2022/Datos/Datos.csproj
+++ b/G1ProyectoFinalLPIII2000UNAH2022/Datos/Datos.csproj
@@ -11,4 +11,15 @@
     <Folder Include="Repositorios\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.2.1" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="MySql.Data" Version="8.0.30" />
+    <PackageReference Include="Radzen.Blazor" Version="3.20.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Entidades\Entidades.csproj" />
+  </ItemGroup>
+
 </Project>
