--- a/G1ProyectoFinalLPIII2000UNAH2022/Entidades/Entidades.csproj
+++ b/G1ProyectoFinalLPIII2000UNAH2022/Entidades/Entidades.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.2.1" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="MySql.Data" Version="8.0.30" />
+    <PackageReference Include="Radzen.Blazor" Version="3.20.2" />
+  </ItemGroup>
+
 </Project>
